--- a/gioithieulw.html
+++ b/gioithieulw.html
@@ -7,7 +7,7 @@
     <title>Giới Thiệu Về F5-Shop </title>
     <link rel="icon" type="image/png" sizes="18x18" href="./assets/img/coollogo_com-97542231.png">
     <link rel="stylesheet" href="./assets/fonts/fontawesome-free-5.15.4-web/css/all.min.css">
-    <link rel="stylesheet" href="/assets/css/lapweb.css">
+    <link rel="stylesheet" href="./assets/css/lapweb.css">
     <script src="./jquery-3.6.0.min.js"></script>
     <style>
         h1 {
@@ -118,7 +118,6 @@
                     <a href="gioithieulw.html">Giới Thiệu</a>
                     <a href="sanphamlw.html">Sản Phẩm</a>
                     <a href="tintuclw.html">Tin Tức</a>
-                    <a href="lienhelw.html">Liên Hệ</a>  
                 </div>
             </div>
         </nav>    
