--- a/sanphamlw.html
+++ b/sanphamlw.html
@@ -588,9 +588,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                16.290.000<span>đ</span>
+                                            15.475.500<span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">15.475.500<span>đ</span></span>
+                                            <span class="container-product-info-price-sale">16.290.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -630,9 +630,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                22.390.000<span>đ</span>
+                                                21.942.200<span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">21.942.200<span>đ</span></span>
+                                            <span class="container-product-info-price-sale">22.390.000 <span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -756,9 +756,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                18.899.000<span>đ</span>
+                                                18.332.030<span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">18.332.030<span>đ</span></span>
+                                            <span class="container-product-info-price-sale"> 18.899.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -840,9 +840,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                18.499.000<span>đ</span>
+                                                18.314.010<span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">18.314.010<span>đ</span></span>
+                                            <span class="container-product-info-price-sale"> 18.499.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -1390,10 +1390,10 @@
                                             <strong>Laptop</strong>  Dell Vostro V3510 i5 1135G7
                                         </div>
                                         <div class="container-product-info-price">
-                                            <span class="container-product-info-price-now"> 
-                                                20.399.000<span>đ</span>
+                                            <span class="container-product-info-price-now">20.195.010 
+                                                <span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">17.819.010<span>đ</span></span>
+                                            <span class="container-product-info-price-sale">20.399.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -1559,9 +1559,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                13.490.000<span>đ</span>
+                                                13.220.020 <span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">13.220.020<span>đ</span></span>
+                                            <span class="container-product-info-price-sale">13.490.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
