--- a/trangchulw.html
+++ b/trangchulw.html
@@ -91,7 +91,7 @@
                     <a href="trangchulw.html">Trang Chủ</a>
                     <a href="gioithieulw.html">Giới Thiệu</a>
                     <a href="sanphamlw.html">Sản Phẩm</a>
-                    <a href="tintuclw.html">Tin Tức</a>  
+                    <a href="tintuclw.html">Tin Tức</a> 
                 </div>
             </div>
         </nav>    
@@ -129,7 +129,6 @@
                 </div>
                 <i class="fas fa-angle-right slider-next"></i>
             </div>
-
 
             <div class="container">
                 <div class="container-left">
@@ -400,8 +399,8 @@
                                     </button>
                                 </p>
                             </div>
+
                             <div class="col_2-2-2-2">
-                                
                                 <div class="container-product">
                                     <div class="container-product-img-wrapper">
                                         <a href="sanphamlw.html">
@@ -421,9 +420,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                16.290.000<span>đ</span>
+                                                15.475.500<span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">15.475.500<span>đ</span></span>
+                                            <span class="container-product-info-price-sale"> 16.290.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -463,9 +462,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                22.390.000<span>đ</span>
+                                                21.942.200<span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">21.942.200<span>đ</span></span>
+                                            <span class="container-product-info-price-sale"> 22.390.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -588,10 +587,10 @@
                                             <strong>Laptop</strong> Dell Vostro V3400 i5 1135G7
                                         </div>
                                         <div class="container-product-info-price">
-                                            <span class="container-product-info-price-now"> 
-                                                18.899.000<span>đ</span>
+                                            <span class="container-product-info-price-now">18.332.030 
+                                                <span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">18.332.030<span>đ</span></span>
+                                            <span class="container-product-info-price-sale">18.899.000 <span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -673,9 +672,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                18.499.000<span>đ</span>
+                                                18.314.010<span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">18.314.010<span>đ</span></span>
+                                            <span class="container-product-info-price-sale"> 18.499.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -760,8 +759,8 @@
                                     </button>
                                 </p>
                             </div>
+
                             <div class="col_2-2-2-2">
-                                
                                 <div class="container-product">
                                     <div class="container-product-img-wrapper">
                                         <a href="sanphamlw.html">
@@ -780,10 +779,10 @@
                                             <strong>Laptop</strong> MSI Modern 14 B11MOU 852VN i5 1155G7
                                         </div>
                                         <div class="container-product-info-price">
-                                            <span class="container-product-info-price-now"> 18.799.000
+                                            <span class="container-product-info-price-now">18.423.020 
                                                 <span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">18.423.020<span>đ</span></span>
+                                            <span class="container-product-info-price-sale">18.799.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -864,10 +863,10 @@
                                             <strong>Laptop</strong>ASUS Flip BR1100FKA-BP0531T N4500
                                         </div>
                                         <div class="container-product-info-price">
-                                            <span class="container-product-info-price-now"> 
-                                                9.499.000<span>đ</span>
+                                            <span class="container-product-info-price-now"> 9.309.020
+                                               <span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">8.739.030<span>đ</span></span>
+                                            <span class="container-product-info-price-sale"> 9.499.000 <span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -948,10 +947,10 @@
                                             <strong>Laptop</strong> Dell Inspiron N3505 R5 3450U
                                         </div>
                                         <div class="container-product-info-price">
-                                            <span class="container-product-info-price-now"> 
-                                                17.999.000<span>đ</span>
+                                            <span class="container-product-info-price-now">17.819.010 
+                                                <span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">17.819.010<span>đ</span></span>
+                                            <span class="container-product-info-price-sale"> 17.999.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -1166,7 +1165,7 @@
                                 <div class="container-product">
                                     <div class="container-product-img-wrapper">
                                         <a href="sanphamlw.html">
-                                            <img class="container-product-img" src="./assets/img/lap18'.jpg" alt="">
+                                            <img class="container-product-img" src="./assets/img/lap18_.jpg" alt="">
                                         </a>
                                         <div class="container-product-btns">
                                             <button class="container-product-btn-order">Đặt hàng</button>
@@ -1224,9 +1223,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                20.399.000<span>đ</span>
+                                             20.195.010<span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">17.819.010<span>đ</span></span>
+                                            <span class="container-product-info-price-sale">20.399.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
@@ -1392,9 +1391,9 @@
                                         </div>
                                         <div class="container-product-info-price">
                                             <span class="container-product-info-price-now"> 
-                                                13.490.000<span>đ</span>
+                                                13.220.020<span>đ</span>
                                             </span> 
-                                            <span class="container-product-info-price-sale">13.220.020<span>đ</span></span>
+                                            <span class="container-product-info-price-sale"> 13.490.000<span>đ</span></span>
                                         </div>
                                         <div class="container-product-info-content">
                                             <div class="container-product-info-content-descrip">
