--- a/gioithieulw.html
+++ b/gioithieulw.html
@@ -37,6 +37,29 @@
 </head>
 <body>
     <header>
+        <div class="snowflakes" aria-hidden="true">
+            <div class="snowflake">
+            ❄
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❆
+            </div>
+            <div class="snowflake">
+            ❄
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❆
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+          </div>
         <div class="header-nav col_3-6-3">
             <div>
                 <a href="#trangchulw">
@@ -118,6 +141,7 @@
                     <a href="gioithieulw.html">Giới Thiệu</a>
                     <a href="sanphamlw.html">Sản Phẩm</a>
                     <a href="tintuclw.html">Tin Tức</a>
+                    <a href="lienhelw.html">Liên Hệ</a>
                 </div>
             </div>
         </nav>    
