--- a/trangchulw.html
+++ b/trangchulw.html
@@ -11,6 +11,29 @@
     <script src="./jquery-3.6.0.min.js"></script>
 </head>
 <body>
+    <div class="snowflakes" aria-hidden="true">
+        <div class="snowflake">
+        ❄
+        </div>
+        <div class="snowflake">
+        ❅
+        </div>
+        <div class="snowflake">
+        ❆
+        </div>
+        <div class="snowflake">
+        ❄
+        </div>
+        <div class="snowflake">
+        ❅
+        </div>
+        <div class="snowflake">
+        ❆
+        </div>
+        <div class="snowflake">
+        ❅
+        </div>
+      </div>
     <header>
         <div class="header-nav col_3-6-3">
             <div>
