--- a/sanphamlw.html
+++ b/sanphamlw.html
@@ -13,6 +13,29 @@
 </head>
 <body>
     <header>
+        <div class="snowflakes" aria-hidden="true">
+            <div class="snowflake">
+            ❄
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❆
+            </div>
+            <div class="snowflake">
+            ❄
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❆
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+          </div>
         <div class="header-nav col_3-6-3">
             <div>
                 <a href="#trangchulw">
@@ -93,6 +116,7 @@
                     <a href="gioithieulw.html">Giới Thiệu</a>
                     <a href="sanphamlw.html">Sản Phẩm</a>
                     <a href="tintuclw.html">Tin Tức</a>
+                    <a href="lienhelw.html">Liên Hệ</a>
                 </div>
             </div>
         </nav>    
@@ -1629,7 +1653,6 @@
                     </div>
 
                     <!-- End: product wrapper -->
-
                 </div>
             </div>
         </div>
