--- a/tintuclw.html
+++ b/tintuclw.html
@@ -19,6 +19,29 @@
 </head>
 <body>
     <header>
+        <div class="snowflakes" aria-hidden="true">
+            <div class="snowflake">
+            ❄
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❆
+            </div>
+            <div class="snowflake">
+            ❄
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+            <div class="snowflake">
+            ❆
+            </div>
+            <div class="snowflake">
+            ❅
+            </div>
+          </div>
         <div class="header-nav col_3-6-3">
             <div>
                 <a href="#trangchu">
@@ -98,7 +121,8 @@
                     <a href="trangchulw.html">Trang Chủ</a>
                     <a href="gioithielw.html">Giới Thiệu</a>
                     <a href="sanphamlw.html">Sản Phẩm</a>
-                    <a href="tintuclw.html">Tin Tức</a>  
+                    <a href="tintuclw.html">Tin Tức</a>
+                    <a href="lienhelw.html">Liên Hệ</a> 
                 </div>
             </div>
         </nav>    
