--- a/dangkylw.html
+++ b/dangkylw.html
@@ -157,15 +157,15 @@
                         <i class="far fa-eye"></i>
                     </div>
                 </div>
-                <input style="color: rgb(0, 0, 0);" type="submit" value="Đăng kí" class="form-submit">
+                <input style="color: rgb(0, 0, 0);" type="submit" value="Đăng ký" class="form-submit">
                
-                <font color="black" size="+1"> 
+                <!-- <font color="black" size="+1"> 
                     Thông qua việc tạo tài khoản, bạn đồng ý với <a href="#">Điều khoản & quyền riêng tư của chúng tôi</a>
                     <div>
                       <a href="#">Quên mật khẩu?</a>
                     chưa có tài khoản <a href="#">Đăng ký!</a>  
                     </div>
-             </font>
+             </font> -->
             </form>
             
 
