--- a/dangnhaplw.html
+++ b/dangnhaplw.html
@@ -127,7 +127,7 @@
                               
                                 <font color="black" size="+1"> 
                                      <div>
-                                    <a href="#">qQên mật khẩu? </a>chưa có tài khoản <a href="dangkylw.html">Đăng ký!</a>  
+                                    <a href="#">Quên mật khẩu? </a>chưa có tài khoản <a href="dangkylw.html">Đăng ký!</a>  
                                   </div>
                                 </font>
                             </form>
