--- a/dangkylw.html
+++ b/dangkylw.html
@@ -159,13 +159,13 @@
                 </div>
                 <input style="color: rgb(0, 0, 0);" type="submit" value="Đăng ký" class="form-submit">
                
-                <!-- <font color="black" size="+1"> 
+                <font color="black" size="+1"> 
                     Thông qua việc tạo tài khoản, bạn đồng ý với <a href="#">Điều khoản & quyền riêng tư của chúng tôi</a>
                     <div>
-                      <a href="#">Quên mật khẩu?</a>
+                      <!-- <a href="#">Quên mật khẩu?</a>
                     chưa có tài khoản <a href="#">Đăng ký!</a>  
-                    </div>
-             </font> -->
+                    </div> -->
+             </font>
             </form>
             
 
