--- a/dangkylw.html
+++ b/dangkylw.html
@@ -161,10 +161,10 @@
                
                 <font color="black" size="+1"> 
                     Thông qua việc tạo tài khoản, bạn đồng ý với <a href="#">Điều khoản & quyền riêng tư của chúng tôi</a>
-                    <!-- <div>
+                    <div>
                       <a href="#">Quên mật khẩu?</a>
                     chưa có tài khoản <a href="#">Đăng ký!</a>  
-                    </div> -->
+                    </div>
              </font>
             </form>
             
