--- a/dangkylw.html
+++ b/dangkylw.html
@@ -75,6 +75,7 @@
 .form-submit:hover{
   border: 1px solid #54a0ff;
   background-color: #54a0ff;
+  cursor: pointer;
 }
 .col1{
   width: 20px;
@@ -320,7 +321,7 @@
                 </div> 
 <!-- Begin:-->
            
-<div class="flex col-2 row" id="form">
+<div class="flex col-2 row sign-up-display" id="form">
     <div class="left col">
         
         <div id="wrapper">
